--- a/src/index.css
+++ b/src/index.css
@@ -23,8 +23,8 @@ code {
   justify-content: space-between;
 }
 .sub{
-  padding-bottom: 30px;
-  padding-top: 30px;
+  padding-bottom: 15px;
+  padding-top: 15px;
   
 }
 h1{
@@ -86,3 +86,43 @@ element={
   width:40vw;
   height: 50vh;
 }
+/* From uiverse.io by @adamgiebl */
+/* From uiverse.io by @alexroumi */
+.ui {
+  padding: 7px 15px;
+  border: unset;
+  border-radius: 15px;
+  color: #212121;
+  z-index: 1;
+  background: #e8e8e8;
+  position: relative;
+  font-weight: 1000;
+  font-size: 17px;
+  -webkit-box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  transition: all 250ms;
+  overflow: hidden;
+ }
+ 
+ .ui::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0;
+  border-radius: 15px;
+  background-color: #212121;
+  z-index: -1;
+  -webkit-box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  transition: all 250ms
+ }
+ 
+ .ui:hover {
+  color: #e8e8e8;
+ }
+ 
+ .ui:hover::before {
+  width: 100%;
+ }
