--- a/src/index.css
+++ b/src/index.css
@@ -139,6 +139,6 @@ element={
    padding-top: 120px;
  }
  .imgg{
-   width: fit-content;
-   height: fit-content;
+   width: auto;
+   height: auto;
  }
